--- a/app/templates/phishing.html
+++ b/app/templates/phishing.html
@@ -22,11 +22,25 @@
 	<b>4. Forged/fake/"funny" links.</b> It's super easy to make links look like legitimate links. For example this link: <a href="http://www.ebay.com">http://www.amazon.com</a> does not lead to where you think it would. You can often check where a link goes by hovering your mouse over a link and checking the bottom left corner of your web browser.   
 	<br><br>
 	</p>
+
+	
+	<div style="float:right; margin-top: 20px;">
+	<div style="float:left; margin-right: 20px; ">
+	<a href="{{ url_for('defaultPasswords') }}"><button class="btn btn-info">Go back</button></a>
+	</div>
+	<div style="float:right;">
+	<a href="{{ url_for('detectingPhishing') }}"><button class="btn btn-info">Next</button></a>
+	</div>
+	</div>
+	
+
+	<!--
 	<div style="float:left; margin-top: 30px">
 	<a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 995px;">Go back</button></a>
 	</div>
 	<div style="float:right; margin-top: 30px">
 	<a href="{{ url_for('detectingPhishing') }}"><button class="btn btn-info">Next</button></a>
+	-->
 
 </div>
 
