--- a/app/templates/email_phishing.html
+++ b/app/templates/email_phishing.html
@@ -3,7 +3,7 @@
 
 <div class="container" style="margin: 0px 0px 0px 0px;">
 
-    <h3>Email Phishing</h3>
+    <h3>Social Engineering and You</h3>
     <hr>
     <p style="margin-bottom: 0px;">Below are some emails. Look at the emails and try to identify any
     signs the ones that are phishing emails. After you have identified the
