--- a/app/templates/phishing.html
+++ b/app/templates/phishing.html
@@ -3,7 +3,7 @@
 
 <div class="container" style="margin: 15px 0px 0px 0px;">
 
-    <h3>Phishing</h3>
+    <h3>Social Engineering and You</h3>
     <hr>
     
     <p>
