Update phishing sub-module.

--- a/app/templates/phishing.html
+++ b/app/templates/phishing.html
@@ -10,17 +10,11 @@
     Phishing (aka Email Scams): A malicious entity contacts you, masquerading as a legitimate business and asks for information, directs you to a false website that will harvest your information, or otherwise tries to rip you off and exploit you.
 	</p>
 
-	<p>   
-    Phishing Email Warning Signs
-	<br>
-	<b>1. Requests for personal information.</b> Facebook won't ask for your personal info, they already have all of  it.
-	<br>
-	<b>2. Generic greeting.</b> Phishing attempts are most often shotgun blasted at a group of targets and thus are rarely personalized."
-	<br>
-	<b>3. Urgency.</b> Any email that starts with, "DO x NOW OR YOUR ACCOUNT/MONEY/DIGNITY/OPPORTUNITY IS LOST FOREVER!" should immediately be met with suspicion. Scam artists love fear. Fear makes you stupid, pliable, and easy.
-	<br>
-	<b>4. Forged/fake/"funny" links.</b> It's super easy to make links look like legitimate links. For example this link: <a href="http://www.ebay.com">http://www.amazon.com</a> does not lead to where you think it would. You can often check where a link goes by hovering your mouse over a link and checking the bottom left corner of your web browser.   
-	<br><br>
+	<h3>Phishing Email Warning Signs</h3>
+        <p><b>1. Requests for personal information.</b> Facebook won't ask for your personal info, they already have all of  it.</p>
+	<p><b>2. Generic greeting.</b> Phishing attempts are most often shotgun blasted at a group of targets and thus are rarely personalized.</p>
+	<p><b>3. Urgency.</b> Any email that starts with, "DO x NOW OR YOUR ACCOUNT/MONEY/DIGNITY/OPPORTUNITY IS LOST FOREVER!" should immediately be met with suspicion. Scam artists love fear. Fear makes you stupid, pliable, and easy.</p>
+	<p><b>4. Forged/fake/"funny" links.</b> It's super easy to make links look like legitimate links. For example this link: <a href="http://www.ebay.com">http://www.amazon.com</a> does not lead to where you think it would. You can often check where a link goes by hovering your mouse over a link and checking the bottom left corner of your web browser. For an example of what to look for, check <a href="/static/images/linkChecking.png">this image</a>.</p>  
 	</p>
 
 	
